<<<<<<< Updated upstream
[gd_scene load_steps=49 format=2]

[ext_resource path="res://bgm/patio3.jpg" type="Texture" id=1]
[ext_resource path="res://bgm/patio1.jpg" type="Texture" id=2]
[ext_resource path="res://bgm/patio2.jpg" type="Texture" id=3]
[ext_resource path="res://images/OPENING.jpg" type="Texture" id=4]
[ext_resource path="res://Exits/Puerta.gd" type="Script" id=5]
[ext_resource path="res://images/puertaCasa.png" type="Texture" id=6]
[ext_resource path="res://images/puertaBaÃ±o.png" type="Texture" id=7]
[ext_resource path="res://tilsets/Tilset.tres" type="TileSet" id=8]
[ext_resource path="res://player/Kin_Pj.gd" type="Script" id=9]
[ext_resource path="res://images/jugadorLateral1.png" type="Texture" id=10]
[ext_resource path="res://images/jugadorLateral2.png" type="Texture" id=11]
[ext_resource path="res://images/jugadorLateral3.png" type="Texture" id=12]
[ext_resource path="res://images/jugadorFrontal.png" type="Texture" id=13]
[ext_resource path="res://images/jugadorSaltando.png" type="Texture" id=14]
[ext_resource path="res://Items/Botella.tscn" type="PackedScene" id=15]
[ext_resource path="res://Items/Botella.gd" type="Script" id=16]
[ext_resource path="res://Items/Contenedor.tscn" type="PackedScene" id=17]
[ext_resource path="res://Items/Contenedor.gd" type="Script" id=18]
[ext_resource path="res://level_1/Duende.gd" type="Script" id=19]
[ext_resource path="res://images/heladeraAbajo.png" type="Texture" id=20]
[ext_resource path="res://images/cofre.png" type="Texture" id=21]
[ext_resource path="res://images/raton.png" type="Texture" id=22]
[ext_resource path="res://images/leprechaun.png" type="Texture" id=23]
[ext_resource path="res://images/armario.png" type="Texture" id=24]
[ext_resource path="res://images/heladeraArriba.png" type="Texture" id=25]
[ext_resource path="res://images/maceta.png" type="Texture" id=26]
[ext_resource path="res://images/mesada.png" type="Texture" id=27]
[ext_resource path="res://images/inventario3.png" type="Texture" id=28]
[ext_resource path="res://images/inventario1.png" type="Texture" id=29]
[ext_resource path="res://images/inventario2.png" type="Texture" id=30]
[ext_resource path="res://images/inventario4.png" type="Texture" id=31]
[ext_resource path="res://images/inventarioRoca.png" type="Texture" id=32]
[ext_resource path="res://images/inventarioLlave.png" type="Texture" id=33]
[ext_resource path="res://images/inventarioVacio.png" type="Texture" id=34]
[ext_resource path="res://images/inventarioCrowbar.png" type="Texture" id=35]
[ext_resource path="res://images/inventarioMoneda.png" type="Texture" id=36]
[ext_resource path="res://images/inventarioBotella.png" type="Texture" id=37]
[ext_resource path="res://images/inventarioGanzuaImprovisadapng.png" type="Texture" id=38]
[ext_resource path="res://images/inventarioQueso.png" type="Texture" id=39]
[ext_resource path="res://sfx/intromusic.wav" type="AudioStream" id=40]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "puerta_casa",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "puerta_banio",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 26.1147, 51.4663 )

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "mover",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "frente",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "salto",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 11.8708, 16.1753 )

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "heladera",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "cofre",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "raton",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "duende",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "armario",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ) ],
"loop": true,
"name": "heladera_ar",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "maceta",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "mesada",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 26.7875, 21.7845 )

[sub_resource type="SpriteFrames" id=7]

animations = [ {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ) ],
"loop": true,
"name": "3",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]

animations = [ {
"frames": [ ExtResource( 32 ) ],
"loop": true,
"name": "roca",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ) ],
"loop": true,
"name": "llave",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ) ],
"loop": true,
"name": "vacio",
"speed": 5.0
}, {
"frames": [ ExtResource( 35 ) ],
"loop": true,
"name": "crowbar",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ) ],
"loop": true,
"name": "moneda",
"speed": 5.0
}, {
"frames": [ ExtResource( 37 ) ],
"loop": true,
"name": "botella",
"speed": 5.0
}, {
"frames": [ ExtResource( 38 ) ],
"loop": true,
"name": "ganzua",
"speed": 5.0
}, {
"frames": [ ExtResource( 39 ) ],
"loop": true,
"name": "queso",
"speed": 5.0
} ]
=======
[gd_scene load_steps=12 format=2]

[ext_resource path="res://tilsets/Tilset.tres" type="TileSet" id=1]
[ext_resource path="res://Items/Botella.tscn" type="PackedScene" id=2]
[ext_resource path="res://Items/Botella.gd" type="Script" id=3]
[ext_resource path="res://Items/Contenedor.tscn" type="PackedScene" id=4]
[ext_resource path="res://Items/Contenedor.gd" type="Script" id=5]
[ext_resource path="res://Items/Item_piso.tscn" type="PackedScene" id=6]
[ext_resource path="res://Item_piso.gd" type="Script" id=7]
[ext_resource path="res://Exits/Puerta.tscn" type="PackedScene" id=8]
[ext_resource path="res://Exits/Puerta.gd" type="Script" id=9]
[ext_resource path="res://player/Kin_Pj.tscn" type="PackedScene" id=10]
[ext_resource path="res://player/Kin_Pj.gd" type="Script" id=11]
>>>>>>> Stashed changes

[node name="Level1_Jardin" type="Node" index="1"]

[node name="background" type="Node" parent="." index="0"]

[node name="TileMap" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 1 )
cell_size = Vector2( 50, 50 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
<<<<<<< Updated upstream
tile_data = PoolIntArray( -2162655, 4, 0, -2162654, 4, 0, -2031648, 4, 0, -2031647, 4, 0, -2031646, 4, 0, -2031645, 4, 0, -2031644, 4, 0, -2031643, 4, 0, -2031642, 4, 0, -2031641, 4, 0, -2031640, 4, 0, -2031639, 4, 0, -2031638, 4, 0, -2031637, 4, 0, -2031636, 4, 0, -2031635, 4, 0, -2031634, 4, 0, -2031633, 4, 0, -2031632, 4, 0, -2031631, 4, 0, -2031630, 4, 0, -2031629, 4, 0, -2031628, 4, 0, -2031627, 4, 0, -2031626, 4, 0, -2031625, 4, 0, -2031624, 4, 0, -2031623, 4, 0, -2031622, 4, 0, -2031621, 4, 0, -2031620, 4, 0, -2031619, 4, 0, -2031618, 4, 0, -2031617, 4, 0, -2097152, 4, 0, -2097151, 4, 0, -2097150, 4, 0, -2097149, 4, 0, -2097148, 4, 0, -2097147, 4, 0, -2097146, 4, 0, -2097145, 4, 0, -2097144, 4, 0, -2097143, 4, 0, -2097142, 4, 0, -2097141, 4, 0, -2097140, 4, 0, -2097139, 4, 0, -2097138, 4, 0, -2097137, 4, 0, -2097136, 4, 0, -2097135, 4, 0, -2097134, 4, 0, -2097133, 4, 0, -2097132, 4, 0, -2097131, 4, 0, -2097130, 4, 0, -2097129, 4, 0, -2097128, 4, 0, -2097127, 4, 0, -2097126, 4, 0, -2097125, 4, 0, -2097124, 4, 0, -2097123, 4, 0, -2097122, 4, 0, -2097121, 4, 0, -2097120, 4, 0, -2097119, 4, 0, -2097118, 4, 0, -1966112, 4, 0, -1966111, 4, 0, -1966110, 4, 0, -2031583, 4, 0, -2031582, 4, 0, -1900576, 4, 0, -1900575, 4, 0, -1900574, 4, 0, -1966047, 4, 0, -1966046, 4, 0, -1835039, 4, 0, -1835038, 4, 0, -1900511, 4, 0, -1900510, 4, 0, -1769504, 4, 0, -1769503, 4, 0, -1769502, 4, 0, -1834975, 4, 0, -1834974, 4, 0, -1703968, 4, 0, -1703967, 4, 0, -1703966, 4, 0, -1769439, 4, 0, -1769438, 4, 0, -1638432, 4, 0, -1638431, 4, 0, -1638430, 4, 0, -1703903, 4, 0, -1703902, 4, 0, -1572896, 4, 0, -1572895, 4, 0, -1572894, 4, 0, -1638367, 4, 0, -1638366, 4, 0, -1507360, 4, 0, -1507359, 4, 0, -1507358, 4, 0, -1572831, 4, 0, -1572830, 4, 0, -1441824, 4, 0, -1441823, 4, 0, -1441822, 4, 0, -1507295, 4, 0, -1507294, 4, 0, -1376288, 4, 0, -1376287, 4, 0, -1376286, 4, 0, -1441759, 4, 0, -1441758, 4, 0, -1310752, 4, 0, -1310751, 4, 0, -1310750, 4, 0, -1376234, 4, 0, -1376233, 4, 0, -1376232, 4, 0, -1376223, 4, 0, -1376222, 4, 0, -1245216, 4, 0, -1245215, 4, 0, -1245214, 4, 0, -1310717, 4, 0, -1310716, 4, 0, -1310687, 4, 0, -1310686, 4, 0, -1179680, 4, 0, -1179679, 4, 0, -1179678, 4, 0, -1245151, 4, 0, -1245150, 4, 0, -1114144, 4, 0, -1114143, 4, 0, -1114142, 4, 0, -1179615, 4, 0, -1179614, 4, 0, -1048608, 4, 0, -1048607, 4, 0, -1048606, 4, 0, -1114105, 4, 0, -1114104, 4, 0, -1114103, 4, 0, -1114102, 4, 0, -1114101, 4, 0, -1114079, 4, 0, -1114078, 4, 0, -983072, 4, 0, -983071, 4, 0, -983070, 4, 0, -983064, 4, 0, -983053, 4, 0, -1048543, 4, 0, -1048542, 4, 0, -917536, 4, 0, -917535, 4, 0, -917534, 4, 0, -917508, 4, 0, -917507, 4, 0, -917506, 4, 0, -917505, 4, 0, -983040, 4, 0, -983007, 4, 0, -983006, 4, 0, -852000, 4, 0, -851999, 4, 0, -851998, 4, 0, -917491, 4, 0, -917490, 4, 0, -917489, 4, 0, -917488, 4, 0, -917487, 4, 0, -917471, 4, 0, -917470, 4, 0, -786464, 4, 0, -786463, 4, 0, -786462, 4, 0, -786459, 4, 0, -786449, 4, 0, -786440, 4, 0, -851935, 4, 0, -851934, 4, 0, -720928, 4, 0, -720927, 4, 0, -720926, 4, 0, -786399, 4, 0, -786398, 4, 0, -655392, 4, 0, -655391, 4, 0, -655390, 4, 0, -720863, 4, 0, -720862, 4, 0, -589856, 4, 0, -589855, 4, 0, -589854, 4, 0, -589825, 4, 0, -655327, 4, 0, -655326, 4, 0, -524320, 4, 0, -524319, 4, 0, -524318, 4, 0, -524309, 4, 0, -524308, 4, 0, -589791, 4, 0, -589790, 4, 0, -458784, 4, 0, -458783, 4, 0, -458782, 4, 0, -524255, 4, 0, -524254, 4, 0, -393248, 4, 0, -393247, 4, 0, -393246, 4, 0, -458719, 4, 0, -458718, 4, 0, -327712, 4, 0, -327711, 4, 0, -327710, 4, 0, -327697, 4, 0, -327693, 4, 0, -327692, 4, 0, -327691, 4, 0, -327690, 4, 0, -327689, 4, 0, -327688, 4, 0, -327687, 4, 0, -327686, 4, 0, -327681, 4, 0, -393183, 4, 0, -393182, 4, 0, -262176, 4, 0, -262175, 4, 0, -262174, 4, 0, -327647, 4, 0, -327646, 4, 0, -196640, 4, 0, -196639, 4, 0, -196638, 4, 0, -262111, 4, 0, -262110, 4, 0, -131104, 4, 0, -131103, 4, 0, -131102, 4, 0, -131077, 4, 0, -196575, 4, 0, -196574, 4, 0, -65568, 4, 0, -65567, 4, 0, -65566, 4, 0, -65561, 4, 0, -65560, 4, 0, -65559, 4, 0, -65558, 4, 0, -65557, 4, 0, -65556, 4, 0, -65555, 4, 0, -65554, 4, 0, -131039, 4, 0, -131038, 4, 0, -32, 4, 0, -31, 4, 0, -30, 4, 0, -65503, 4, 0, -65502, 4, 0, 65504, 4, 0, 65505, 4, 0, 65506, 4, 0, 33, 4, 0, 34, 4, 0, 131040, 4, 0, 131041, 4, 0, 131042, 4, 0, 65569, 4, 0, 65570, 4, 0, 196576, 4, 0, 196577, 4, 0, 196578, 4, 0, 131105, 4, 0, 131106, 4, 0, 262127, 4, 0, 262128, 4, 0, 262129, 4, 0, 262130, 4, 0, 262131, 4, 0, 262132, 4, 0, 196641, 4, 0, 196642, 4, 0, 262177, 4, 0, 262178, 4, 0, 327713, 4, 0, 327714, 4, 0, 458731, 4, 0, 458732, 4, 0, 458733, 4, 0, 458734, 4, 0, 458735, 4, 0, 458736, 4, 0, 393249, 4, 0, 393250, 4, 0, 458785, 4, 0, 458786, 4, 0, 589796, 4, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 524302, 2, 0, 524303, 2, 0, 524304, 2, 0, 524305, 2, 0, 524306, 2, 0, 524307, 2, 0, 524308, 2, 0, 524309, 2, 0, 524310, 2, 0, 524311, 2, 0, 524312, 2, 0, 524313, 2, 0, 524314, 2, 0, 524315, 2, 0, 524316, 2, 0, 524317, 2, 0, 524318, 2, 0, 524321, 4, 0, 524322, 4, 0, 589826, 2, 0, 589827, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 2, 0, 589834, 2, 0, 589835, 2, 0, 589836, 2, 0, 589837, 2, 0, 589838, 2, 0, 589839, 2, 0, 589840, 2, 0, 589841, 2, 0, 589842, 2, 0, 589843, 2, 0, 589844, 2, 0, 589845, 2, 0, 589846, 2, 0, 589847, 2, 0, 589848, 2, 0, 589849, 2, 0, 589850, 2, 0, 589851, 2, 0, 589852, 2, 0, 589853, 2, 0, 589854, 2, 0, 589855, 2, 0, 589856, 2, 0, 589857, 2, 0, 589858, 4, 0, 720895, 2, 0, 655360, 2, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 2, 0, 655366, 2, 0, 655367, 2, 0, 655368, 2, 0, 655369, 2, 0, 655370, 2, 0, 655371, 2, 0, 655372, 2, 0, 655373, 2, 0, 655374, 2, 0, 655375, 2, 0, 655376, 2, 0, 655377, 2, 0, 655378, 2, 0, 655379, 2, 0, 655380, 2, 0, 655381, 2, 0, 655382, 2, 0, 655383, 2, 0, 655384, 2, 0, 655385, 2, 0, 655386, 2, 0, 655387, 2, 0, 655388, 2, 0, 655389, 2, 0, 655390, 2, 0, 655391, 2, 0, 655392, 2, 0, 655393, 2, 0, 655394, 2, 0, 786396, 0, 0, 786397, 0, 0, 786398, 0, 0, 786399, 0, 0, 786400, 0, 0, 786401, 0, 0, 786402, 0, 0, 786403, 0, 0, 786404, 0, 0, 786405, 0, 0, 786406, 0, 0, 786407, 0, 0, 786408, 0, 0, 786409, 0, 0, 786410, 0, 0, 786411, 1, 0, 786412, 0, 0, 786413, 0, 0, 786414, 0, 0, 786415, 0, 0, 786416, 0, 0, 786417, 0, 0, 786418, 0, 0, 786419, 0, 0, 786420, 0, 0, 786421, 0, 0, 786422, 0, 0, 786423, 0, 0, 786424, 0, 0, 786425, 0, 0, 786426, 0, 0, 786427, 0, 0, 786428, 0, 0, 786429, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 1, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 1, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 720922, 0, 0, 720923, 0, 0, 720924, 0, 0, 720925, 0, 0, 720926, 0, 0, 720927, 0, 0, 720928, 0, 0, 720929, 0, 0, 720930, 0, 0, 720931, 0, 0, 851920, 0, 0, 851921, 0, 0, 851922, 0, 0, 851923, 0, 0, 851924, 0, 0, 851925, 0, 0, 851926, 0, 0, 851927, 0, 0, 851928, 0, 0, 851929, 0, 0, 851930, 0, 0, 851931, 0, 0, 851934, 0, 0, 851935, 0, 0, 851936, 0, 0, 851937, 0, 0, 851938, 0, 0, 851939, 1, 0, 851940, 0, 0, 851941, 0, 0, 851942, 0, 0, 851943, 0, 0, 851944, 0, 0, 851945, 0, 0, 851946, 0, 0, 851947, 0, 0, 851948, 0, 0, 851949, 0, 0, 851950, 0, 0, 851951, 1, 0, 851952, 0, 0, 851953, 0, 0, 851954, 0, 0, 851955, 0, 0, 851956, 0, 0, 851957, 0, 0, 851958, 0, 0, 851959, 0, 0, 851960, 0, 0, 851961, 0, 0, 851962, 0, 0, 851963, 0, 0, 851964, 0, 0, 851965, 0, 0, 851966, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0, 786461, 1, 0, 786462, 0, 0, 786463, 0, 0, 786464, 0, 0, 786465, 0, 0, 786466, 0, 0, 786467, 0, 0, 917428, 0, 0, 917429, 0, 0, 917430, 0, 0, 917431, 0, 0, 917432, 0, 0, 917433, 0, 0, 917434, 0, 0, 917435, 0, 0, 917436, 0, 0, 917437, 0, 0, 917438, 0, 0, 917439, 0, 0, 917440, 0, 0, 917441, 0, 0, 917442, 0, 0, 917443, 0, 0, 917444, 0, 0, 917445, 0, 0, 917446, 0, 0, 917447, 0, 0, 917448, 0, 0, 917449, 0, 0, 917450, 0, 0, 917451, 0, 0, 917452, 0, 0, 917453, 0, 0, 917454, 0, 0, 917455, 0, 0, 917462, 0, 0, 917463, 0, 0, 917464, 0, 0, 917465, 0, 0, 917466, 0, 0, 917467, 0, 0, 917468, 0, 0, 917469, 0, 0, 917470, 0, 0, 917471, 0, 0, 917472, 0, 0, 917473, 0, 0, 917474, 0, 0, 917475, 0, 0, 917476, 0, 0, 917477, 0, 0, 917478, 0, 0, 917479, 1, 0, 917480, 0, 0, 917481, 0, 0, 917482, 0, 0, 917483, 0, 0, 917484, 0, 0, 917485, 0, 0, 917486, 0, 0, 917487, 0, 0, 917488, 0, 0, 917489, 0, 0, 917490, 0, 0, 917491, 0, 0, 917492, 0, 0, 917493, 0, 0, 917494, 0, 0, 917495, 0, 0, 917496, 0, 0, 917497, 0, 0, 917498, 0, 0, 917499, 0, 0, 917500, 0, 0, 917501, 0, 0, 917502, 0, 0, 917503, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 1, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0, 852000, 0, 0, 852001, 0, 0, 852002, 0, 0, 852003, 0, 0, 982986, 0, 0, 982987, 0, 0, 982988, 0, 0, 982989, 0, 0, 982990, 0, 0, 982991, 0, 0, 982992, 0, 0, 982993, 0, 0, 982994, 0, 0, 982995, 0, 0, 982996, 0, 0, 982997, 0, 0, 982998, 0, 0, 982999, 0, 0, 983000, 0, 0, 983001, 0, 0, 983002, 0, 0, 983003, 0, 0, 983004, 0, 0, 983005, 0, 0, 983006, 0, 0, 983007, 0, 0, 983008, 0, 0, 983010, 0, 0, 983011, 0, 0, 983012, 0, 0, 983013, 0, 0, 983014, 0, 0, 983015, 0, 0, 983016, 0, 0, 983017, 0, 0, 983018, 0, 0, 983019, 0, 0, 983020, 0, 0, 983021, 0, 0, 983022, 0, 0, 983023, 0, 0, 983024, 0, 0, 983025, 0, 0, 983026, 0, 0, 983027, 0, 0, 983028, 0, 0, 983029, 0, 0, 983030, 0, 0, 983031, 0, 0, 983032, 0, 0, 983033, 1, 0, 983034, 0, 0, 983035, 0, 0, 983036, 0, 0, 983037, 0, 0, 983038, 0, 0, 983039, 0, 0, 917504, 0, 0, 917505, 1, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 917528, 0, 0, 917529, 0, 0, 917530, 0, 0, 917531, 0, 0, 917532, 0, 0, 917533, 0, 0, 917534, 0, 0, 917535, 0, 0, 917536, 0, 0, 917537, 0, 0, 917538, 0, 0, 917539, 0, 0 )
=======
tile_data = PoolIntArray( 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196624, 3, 0, 196625, 3, 0, 196626, 3, 0, 196627, 3, 0, 196628, 3, 0, 262164, 3, 0, 262165, 3, 0, 262166, 3, 0, 262167, 3, 0, 262168, 3, 0, 458753, 3, 0, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458760, 3, 0, 655360, 1, 0, 655361, 0, 0, 655362, 0, 0, 655363, 1, 0, 655369, 2, 0, 655370, 2, 0, 655371, 2, 0, 655372, 2, 0, 655373, 2, 0, 655374, 2, 0, 655375, 2, 0, 655376, 2, 0, 917504, 0, 0, 917505, 1, 0, 917506, 0, 0, 917507, 0, 0, 917508, 1, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 1, 0, 917513, 0, 0, 917514, 0, 0, 1114124, 2, 0, 1114125, 2, 0, 1114126, 2, 0, 1114127, 2, 0, 1114128, 2, 0, 1114129, 2, 0, 1114130, 2, 0, 1114131, 2, 0, 1114132, 2, 0, 1114133, 2, 0 )
>>>>>>> Stashed changes
_sections_unfolded = [ "Cell" ]
__meta__ = {
"_edit_lock_": true
}

<<<<<<< Updated upstream
[node name="Kin_Pj" type="KinematicBody2D" parent="." index="3" groups=[
"player",
]]

position = Vector2( 531.347, 95.5214 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 9 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="spr_Pj" type="AnimatedSprite" parent="Kin_Pj" index="0"]

frames = SubResource( 3 )
animation = "salto"
playing = true
flip_h = true
_sections_unfolded = [ "Transform" ]

[node name="col_Pj" type="CollisionShape2D" parent="Kin_Pj" index="1"]

position = Vector2( -17.0598, -16.8092 )
scale = Vector2( 0.45231, 2.44334 )
shape = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="Kin_Pj" index="2"]

position = Vector2( -3.8147e-006, 20.735 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="Botella" type="StaticBody2D" parent="." index="4" groups=[
=======
[node name="Botella2" type="StaticBody2D" parent="." index="2" groups=[
>>>>>>> Stashed changes
"items",
] instance=ExtResource( 2 )]

position = Vector2( 638.995, 117.807 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Botella3" type="StaticBody2D" parent="." index="3" groups=[
"items",
] instance=ExtResource( 2 )]

position = Vector2( 714.341, 113.375 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

<<<<<<< Updated upstream
[node name="Botella5" type="StaticBody2D" parent="." index="6" groups=[
"items",
] instance=ExtResource( 15 )]

position = Vector2( -1226.68, -889.168 )
=======
[node name="Botella4" type="StaticBody2D" parent="." index="4" groups=[
"items",
] instance=ExtResource( 2 )]

position = Vector2( 798.552, 111.159 )
>>>>>>> Stashed changes
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
<<<<<<< Updated upstream
script = ExtResource( 16 )
=======
script = ExtResource( 3 )
>>>>>>> Stashed changes
__meta__ = {
"_edit_group_": true
}

<<<<<<< Updated upstream
[node name="Planta1" type="Area2D" parent="." index="7" instance=ExtResource( 17 )]

position = Vector2( -528.141, -185.086 )
=======
[node name="Contenedor" type="Area2D" parent="." index="5" instance=ExtResource( 4 )]

position = Vector2( 316.756, 325.351 )
>>>>>>> Stashed changes
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
item = "llave"
vivo = false

<<<<<<< Updated upstream
[node name="Planta3" type="Area2D" parent="." index="8" instance=ExtResource( 17 )]
=======
[node name="Item_piso" type="Area2D" parent="." index="6" instance=ExtResource( 6 )]
>>>>>>> Stashed changes

position = Vector2( 229.587, 316.756 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}
item = "crowbar"
vivo = true

<<<<<<< Updated upstream
[node name="Planta2" type="Area2D" parent="." index="9" instance=ExtResource( 17 )]
=======
[node name="Puerta" type="Area2D" parent="." index="7" instance=ExtResource( 8 )]
>>>>>>> Stashed changes

position = Vector2( 805.396, 449.352 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
<<<<<<< Updated upstream
script = ExtResource( 18 )
__meta__ = {
"_edit_group_": true
}
item = "botella"
vivo = false

[node name="Duende" type="Area2D" parent="." index="10"]

position = Vector2( -383.365, -799.257 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 19 )
__meta__ = {
"_edit_group_": true
}
item = null
vivo = null

[node name="AnimatedSprite" type="AnimatedSprite" parent="Duende" index="0"]

frames = SubResource( 5 )
animation = "duende"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Duende" index="1"]

position = Vector2( -0.315559, 4.73338 )
shape = SubResource( 6 )

[node name="Barras" type="Node" parent="." index="11"]

[node name="Timer" type="Timer" parent="Barras" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="CanvasLayer" type="CanvasLayer" parent="Barras" index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
=======
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}
item1 = null
item2 = null
cerrado = null
>>>>>>> Stashed changes

[node name="Kin_Pj" type="KinematicBody2D" parent="." index="8" groups=[
"player",
] instance=ExtResource( 10 )]

<<<<<<< Updated upstream
position = Vector2( 226.212, 679.474 )
frames = SubResource( 7 )
animation = "0"
_sections_unfolded = [ "Transform" ]

[node name="item1" type="AnimatedSprite" parent="Barras/CanvasLayer" index="1"]

position = Vector2( 75.5274, 691.367 )
frames = SubResource( 8 )
animation = "botella"

[node name="item2" type="AnimatedSprite" parent="Barras/CanvasLayer" index="2"]

position = Vector2( 177.312, 687.666 )
frames = SubResource( 8 )
animation = "roca"

[node name="item3" type="AnimatedSprite" parent="Barras/CanvasLayer" index="3"]

position = Vector2( 274.882, 687.676 )
frames = SubResource( 8 )
animation = "botella"
=======
position = Vector2( 719.752, 445.16 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="Contenedor" to="Contenedor" method="_on_Contenedor_body_entered"]
>>>>>>> Stashed changes

[connection signal="body_exited" from="Contenedor" to="Contenedor" method="_on_Contenedor_body_exited"]

<<<<<<< Updated upstream
position = Vector2( 372.622, 687.476 )
frames = SubResource( 8 )
animation = "llave"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="12"]

stream = ExtResource( 40 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
=======
[connection signal="body_entered" from="Item_piso" to="Item_piso" method="_on_Item_piso_body_entered"]

[connection signal="body_exited" from="Item_piso" to="Item_piso" method="_on_Item_piso_body_exited"]
>>>>>>> Stashed changes

[connection signal="body_entered" from="Puerta" to="Puerta" method="_on_Puerta_body_entered"]

[connection signal="body_exited" from="Puerta" to="Puerta" method="_on_Puerta_body_exited"]

<<<<<<< Updated upstream
[connection signal="accion" from="Kin_Pj" to="Planta1" method="_on_Kin_Pj_accion"]

[connection signal="accion" from="Kin_Pj" to="Planta3" method="_on_Kin_Pj_accion"]

[connection signal="accion" from="Kin_Pj" to="Planta2" method="_on_Kin_Pj_accion"]

[connection signal="accion" from="Kin_Pj" to="Duende" method="_on_Kin_Pj_accion"]

[connection signal="body_entered" from="Planta1" to="Planta1" method="_on_Contenedor_body_entered"]

[connection signal="body_exited" from="Planta1" to="Planta1" method="_on_Contenedor_body_exited"]

[connection signal="body_entered" from="Planta3" to="Planta3" method="_on_Contenedor_body_entered"]

[connection signal="body_exited" from="Planta3" to="Planta3" method="_on_Contenedor_body_exited"]

[connection signal="body_entered" from="Planta2" to="Planta2" method="_on_Contenedor_body_entered"]

[connection signal="body_exited" from="Planta2" to="Planta2" method="_on_Contenedor_body_exited"]

[connection signal="body_entered" from="Duende" to="Duende" method="_on_Contenedor_body_entered"]

[connection signal="body_exited" from="Duende" to="Duende" method="_on_Contenedor_body_exited"]

=======
>>>>>>> Stashed changes

